syntax = "proto3";

package user_v1;

option go_package = "github.com/bmstu-itstech/contest-auth/app/pkg/auth_v1;auth_v1";

service UserV1 {
  rpc Registration (RegistrationRequest) returns (RegistrationResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Logout (LogoutRequest) returns (LogoutResponse);
  rpc GetRefreshToken (GetRefreshTokenRequest) returns (GetRefreshTokenResponse);
  rpc GetAccessToken (GetAccessTokenRequest) returns (GetAccessTokenResponse);
}

message RegistrationRequest {
    string username = 1;
    string password = 2;
}

message RegistrationResponse {
    string success = 1;
}

message LogoutRequest {
    string refresh_token = 1;
}

message LogoutResponse {
    string refresh_token = 1;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string refresh_token = 1;
}

message GetRefreshTokenRequest {
  string refresh_token = 1;
}

message GetRefreshTokenResponse {
  string refresh_token = 1;
}

message GetAccessTokenRequest {
  string refresh_token = 1;
}

message GetAccessTokenResponse {
  string access_token = 1;
}